package netty;
option java_outer_classname = "SubscribeReqProto";
option optimize_for = LITE_RUNTIME;
message com.mars.SubscribeReq{
    required int32 subReqID = 1;
    required string userName = 2;
    required string productName = 3;
    repeated string address = 4;
}
